# eips.exposed

./: .flake8  .gitignore  .gitmodules  .sops.yaml  README.md  alembic.ini  ansible.cfg  deploy.sh  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  start_processor.sh
devops/: README.md
devops/dockerfiles/: Dockerfile.migrate  Dockerfile.update  Dockerfile.web
devops/scripts/: migrate-entrypoint.sh  update-entrypoint.sh  web-entrypoint.sh
eips_etl/: apps.py  data.py  importer.py  models.py  search.py  urls.py  views.py
eips_etl/migrations/: 0001_initial.py  0002_sitemap.py
eips_exposed/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
eips_exposed/common/: __init__.py  config.py  db.py  exceptions.py
eips_exposed/processor/: __init__.py  __main__.py  git.py  main.py  objects.py  parser.py
eips_exposed/server/: __main__.py  app.py
eips_frontend/: package.json
eips_frontend/src/: App.js  index.js  index.scss
eips_web/: apps.py  object.py  urls.py  util.py  views.py
eips_web/static/: base.css  codehilite.css  osd.xml  pixelateLogo.js
eips_web/templates/: base.html  commit.html  document.html  http_error.html  index.html  parse-errors.html  search.html  sitemap.xml
eips_web/templatetags/: censoremail.py  decode.py  fixlinks.py  ghusername.py  markdown.py  since.py
ops/: README.md
ops/alembic/: env.py
ops/ansible/: README.md  eips.exposed.yaml  main.yaml
ops/conf/: nginx.conf  serve.config.json
ops/data/: eip_tag.csv  tag.csv
ops/dockerfiles/: eips_api  eips_frontend  (+1 more)
(+85 files in other folders)
