[project]
name = "eips-exposed"
version = "0.1.0"
description = "Ethereum design documents (EIP and ERC) explorer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-prometheus>=2.3.1",
    "django>=5.1.2,<6",
    "eips>=0.2.0",
    "humanize>=4.11.0",
    "markdown>=3.7",
    "psycopg2-binary>=2.9.10",
    "pygments>=2.18.0",
    "typesense>=0.21.0",
    "whitenoise>=6.8.2",
    "django-allow-cidr>=0.7.1",
]

[dependency-groups]
dev = [
    "pudb>=2024.1.3",
]

# [tool.uv.sources]
# eips = { path = "../eips", editable = true }
